Fix alignment of elements in <Carousel /> molecule

--- a/client/src/styles/components/_carousel.scss
+++ b/client/src/styles/components/_carousel.scss
@@ -1,4 +1,7 @@
-.carousel-wrapper {
+$thumbnail-width-sm: 110px;
+$thumbnail-width-md: 130px;
+
+.carousel {
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
@@ -7,97 +10,122 @@
 	overflow-y: hidden;
 	margin-bottom: 1rem;
 
-	@media (min-width: 992px) {
+	@media (min-width: 768px) {
 		margin-bottom: 2rem;
 	}
-}
 
-.carousel-slide-track {
-	grid-area: slide-track;
-	position: relative;
-	overflow: hidden;
-	height: max-content;
-	margin-right: 0;
+	display: flex;
+	flex-direction: column;
 
-	@media (min-width: 768px) {
-		margin-right: 150px;
+	&__slide-track {
+		grid-area: slide-track;
+		position: relative;
+		overflow: hidden;
+		height: max-content;
+		margin-right: 0;
+
+		@media (min-width: 768px) {
+			margin-right: $thumbnail-width-md;
+		}
 	}
 
-	&__inner {
+	&__slide-track-inner {
 		transition: all .5s;
 		position: relative;
 		display: flex;
 	}
-}
 
-.carousel-slide {
-	flex: 1;
+	&__slide {
+		flex: 1;
 
-	&__image {
+		@media (min-width: 768px) {
+			margin-right: $thumbnail-width-md;
+		}
+	}
+
+	&__slide-image {
 		width: 100%;
 		height: 100%;
 	}
-}
 
-.carousel-thumbnail-track {
-	position: absolute;
-	top: 0;
-	right: 0;
-	width: 150px;
-	grid-area: thumbnail-track;
-	overflow-y: scroll;
-	display: none;
-	height: 102%;
-	
+	&__thumbnail-track {
+		width: 100%;
+		grid-area: thumbnail-track;
+		overflow-x: scroll;
+		padding-top: 2px;
 
-	@media (min-width: 768px) {
-		// display: table-row;
-		display: initial;
+		@media (min-width: 768px) {
+			height: 102%;
+			width: $thumbnail-width-md;
+			display: initial;
+			position: absolute;
+			top: 0;
+			right: 0;
+			overflow-y: scroll;
+			padding-top: 0;
+		}
 	}
 
-	&__inner {
+	&__thumbnail-track-inner {
+		overflow-y: hidden;
+		width: 100%;
+
+		display: flex;
+
+		@media (min-width: 768px) {
+			padding-left: 3px;
+			display: grid;
+			grid-template-rows: repeat(100, max-content);
+			overflow-y: scroll;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 0;
+		}
+	}
+
+	&__thumbnail {
+		cursor: pointer;
+		flex: 0 0 $thumbnail-width-sm;
+
+		&:not(:last-child) {
+			padding-right: 2px;
+		}
+
+		@media (min-width: 768px) {
+			width: $thumbnail-width-md;
+			height: 100%;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			padding-bottom: 3px;
+		}
+	}
+
+	&__arrow {
 		position: absolute;
-		left: 0;
-		right: 0;
-		top: 0;
-		bottom: 0;
-		display: grid;
-		grid-template-columns: auto;
-		padding-left: 3px;
-	}
-}
+		z-index: 3;
+		svg {
+			fill: $light-color;
+		}
 
-.carousel-thumbnail {
-	width: 150px;
-	height: 100%;
-	cursor: pointer;
-	img {
-		width: 100%;
-		height: 100%;
-		padding-bottom: 3px;
-	}
-}
+		&--left {
+			left: 1%;
+			bottom: 50%;
+			transform: translateY(50%);
+		}
 
-.carousel-arrow {
-	position: absolute;
-	z-index: 3;
-	svg {
-		fill: $light-color;
+		&--right {
+			right: 1%;
+			bottom: 50%;
+			transform: translateY(50%);
+		}
 	}
 
-	&--left {
-		left: 1%;
-		bottom: 50%;
-		transform: translateY(50%);
-	}
-
-	&--right {
-		right: 1%;
-		bottom: 50%;
-		transform: translateY(50%);
-	}
-
-	&__icon {
+	&__arrow-icon {
 		width: 3rem;
 		height: 3rem;
 		cursor: pointer;
